--- a/l10n/MeritsOfService/en.yaml
+++ b/l10n/MeritsOfService/en.yaml
@@ -14,11 +14,13 @@ minAttributeReward_name: Min Attributes Granted
 maxAttributeReward_name: Max Attributes Granted
 skillRewardWeight_name: Skill Reward Weight
 attributeRewardWeight_name: Attribute Reward Weight
-skillsContributeToLevel_name: Skill Rewards Contribute to Level
-skillsContributeToLevel_description: |
-  If enabled, skill rewards will trigger all respective handlers (vanilla and modded).
+triggerSkillupHandlers_name: Skill Rewards Trigger Handlers
+triggerSkillupHandlers_description: |
+  If enabled, skill rewards will trigger all respective handlers (vanilla and modded). This includes contributing to character level and triggering similar things adde by other mods.
 
   If disabled, skill rewards will just raise your base skill level ignoring all logic which might usually trigger on skill lvl ups.
 carrySkillXp_name: Carry Skill Xp
-capSkills_name: Cap Skill Rewards at 100 [TODO]
-capAttr_name: Cap Attribute Rewards at 100 [TODO]
+capSkills_name: Cap Skill Rewards at 100
+capSkills_description: "[NOT IMPLEMENTED YET]"
+capAttr_name: Cap Attribute Rewards at 100
+capAttr_description: "[NOT IMPLEMENTED YET]"
